syntax = "proto3";

option csharp_namespace = "VetClinicService";

import "google/protobuf/wrappers.proto";

service VetClinicService{
    rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
    rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
    rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
    rpc GetByClientId (GetByClientIdRequest) returns (GetByClientIdResponse);
    rpc GetClients (GetClientsRequest) returns (GetClientsResponse);

    /*rpc CreatePet (CreatePetRequest) returns (CreatePetResponse);
    rpc UpdatePet (UpdatePetRequest) returns (UpdatePetResponse);
    rpc DeletePet(DeletePetRequest) returns (DeletePetResponse);
    rpc GetByPetId (GetByPetIdRequest) returns (GetByPetIdResponse);
    rpc GetPets(GetPetsRequest) returns (GetPetsResponse);*/
}

message CreateClientRequest{
    string document = 1;
    string lastname = 2;
    string firstname = 3;
    string patronymic = 4;
}

message CreateClientResponse{
    google.protobuf.Int32Value clientId = 1;
    int32 errorCode = 2;
    string errorMessage = 3;
}

message UpdateClientRequest{
    int32 clientId = 1;
    string document = 2;
    string lastname = 3;
    string firstname = 4;
    string patronymic = 5;
}

message UpdateClientResponse{
    int32 errorCode = 1;
    string errorMessage = 2;
}

message DeleteClientRequest{
    int32 clientId = 1;
}

message DeleteClientResponse{
    int32 errorCode = 1;
    string errorMessage = 2;
}

message GetByClientIdRequest{
    int32 clientId = 1;
}

message GetByClientIdResponse{
    ClientResponse client = 1;
    int32 errorCode = 2;
    string errorMessage = 3;
}

message ClientResponse{
    int32 clientId = 1;
    string document = 2;
    string lastname = 3;
    string firstname = 4;
    string patronymic = 5;
}

message GetClientsRequest{

}

message GetClientsResponse{
    repeated ClientResponse clients = 1;
    int32 errorCode = 2;
    string errorMessage = 3;
}
